--- a/Riffle/Riffle.csproj
+++ b/Riffle/Riffle.csproj
@@ -7,14 +7,12 @@
         <FrontendDir>$(ProjectDir)../RiffleFrontend/</FrontendDir>
     </PropertyGroup>
 
-    <Target Name="RunViteBuild" BeforeTargets="Build">
+    <Target Name="RunViteBuild" BeforeTargets="CopyToOutputDirectory">
         <Message Text="Building frontend scripts into wwwroot." />
 
-        <Exec Command="npm install" WorkingDirectory="$(FrontendDir)"
-            Condition="Exists('$(FrontendDir)package.json')" />
+        <Exec Command="npm install" WorkingDirectory="$(FrontendDir)" Condition="Exists('$(FrontendDir)package.json')" />
 
-        <Exec Command="npx vite build" WorkingDirectory="$(FrontendDir)"
-            Condition="Exists('$(FrontendDir)package.json')" />
+        <Exec Command="npx vite build" WorkingDirectory="$(FrontendDir)" Condition="Exists('$(FrontendDir)package.json')" />
     </Target>
 
     <Target Name="CleanViteBuild" AfterTargets="Clean">
@@ -22,11 +20,15 @@
     </Target>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"
-            Version="9.0.5" />
+        <Content Include="$(ProjectDir)Resources/viteMap.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
-            Version="9.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
