--- a/RiffleFrontend/package.json
+++ b/RiffleFrontend/package.json
@@ -14,5 +14,9 @@
     "gsap": "^3.13.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3"
   }
 }
