feat: Generate sentences and options

--- a/Riffle/appsettings.json
+++ b/Riffle/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RiffleDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "BuildCfg": {
+    "OllamaUri": "http://localhost:11434/"
   }
 }
